add_subdirectory(runtime)
add_subdirectory(cognition)
add_subdirectory(llm)
add_subdirectory(tools)
add_subdirectory(memory)
add_subdirectory(knowledge)
add_subdirectory(infra)
add_subdirectory(platform)
add_subdirectory(profiles)

set(DASALL_UNIT_TEST_EXECUTABLE_TARGETS
	dasall_runtime_smoke_test
	dasall_infra_context_unit_test
	dasall_log_event_unit_test
	dasall_audit_event_unit_test
	dasall_health_probe_interface_unit_test
	dasall_health_snapshot_unit_test
	dasall_metrics_config_policy_interface_unit_test
	dasall_metrics_errors_unit_test
	dasall_metrics_health_probe_interface_unit_test
	dasall_metrics_snapshots_unit_test
	dasall_metric_exporter_interface_unit_test
	dasall_metric_types_unit_test
	dasall_trace_types_unit_test
	dasall_span_interface_unit_test
	dasall_trace_context_propagator_interface_unit_test
	dasall_trace_errors_unit_test
	dasall_infra_service_facade_unit_test
	dasall_secret_backend_interface_unit_test
	dasall_secret_errors_unit_test
	dasall_secret_health_source_interface_unit_test
	dasall_secret_manager_interface_unit_test
	dasall_secret_secure_buffer_unit_test
	dasall_secret_types_unit_test
	dasall_meter_interface_unit_test
	dasall_metrics_provider_interface_unit_test
	dasall_logger_interface_unit_test
	dasall_logging_errors_unit_test
	dasall_logging_facade_unit_test
	dasall_sink_dispatcher_unit_test
	dasall_async_queue_controller_unit_test
	dasall_audit_link_adapter_unit_test
	dasall_logging_recovery_unit_test
	dasall_audit_logger_interface_unit_test
	dasall_audit_service_fallback_unit_test
	dasall_audit_export_filter_unit_test
	dasall_policy_snapshot_compatibility_unit_test
	dasall_policy_types_rule_bundle_unit_test
	dasall_policy_patch_validation_types_unit_test
	dasall_policy_snapshot_op_result_types_unit_test
	dasall_policy_manager_interface_unit_test
	dasall_policy_loader_interface_unit_test
	dasall_policy_schema_validator_interface_unit_test
	dasall_policy_snapshot_store_interface_unit_test
	dasall_policy_query_decision_ref_types_unit_test
	dasall_policy_errors_unit_test
	dasall_config_types_unit_test
	dasall_config_center_interface_unit_test
	dasall_config_center_facade_unit_test
	dasall_config_loader_interface_unit_test
	dasall_config_loader_unit_test
	dasall_config_merger_unit_test
	dasall_config_validator_interface_unit_test
	dasall_config_validator_unit_test
	dasall_config_snapshot_store_interface_unit_test
	dasall_config_snapshot_store_unit_test
	dasall_config_publisher_interface_unit_test
	dasall_config_publisher_unit_test
	dasall_config_errors_unit_test
	dasall_plugin_catalog_unit_test
	dasall_plugin_descriptor_unit_test
	dasall_plugin_error_code_unit_test
	dasall_plugin_manager_interface_unit_test
	dasall_plugin_policy_gate_interface_unit_test
	dasall_health_monitor_interface_unit_test
	dasall_watchdog_service_interface_unit_test
	dasall_heartbeat_source_interface_unit_test
	dasall_timeout_policy_interface_unit_test
	dasall_watched_entity_descriptor_unit_test
	dasall_heartbeat_sample_unit_test
	dasall_timeout_decision_unit_test
	dasall_watchdog_snapshot_unit_test
	dasall_watchdog_recovery_hint_request_unit_test
	dasall_health_policy_interface_unit_test
	dasall_health_probe_types_unit_test
	dasall_health_recovery_hint_unit_test
	dasall_infra_error_code_unit_test
	dasall_ota_types_unit_test
	dasall_ota_manager_interface_unit_test
	dasall_ota_package_verifier_interface_unit_test
	dasall_install_executor_interface_unit_test
	dasall_boot_control_adapter_interface_unit_test
	dasall_platform_init_config_unit_test
	dasall_diagnostics_types_unit_test
	dasall_diagnostics_snapshot_export_unit_test
	dasall_linux_platform_capabilities_unit_test
	dasall_platform_error_mapping_unit_test
	dasall_platform_interface_surface_unit_test
	dasall_linux_platform_factory_unit_test
	dasall_capability_registry_unit_test
	dasall_posix_thread_provider_unit_test
	dasall_posix_timer_provider_unit_test
	dasall_blocking_queue_provider_unit_test
	dasall_linux_file_system_provider_unit_test
	dasall_linux_network_provider_unit_test
	dasall_unix_ipc_provider_unit_test
	dasall_hal_availability_bridge_unit_test
	dasall_profile_catalog_interface_unit_test
	dasall_profile_catalog_unit_test
	dasall_build_profile_manifest_unit_test
	dasall_build_profile_resolver_unit_test
	dasall_runtime_policy_snapshot_unit_test
	dasall_runtime_policy_provider_unit_test
	dasall_profile_compatibility_validator_unit_test
	dasall_profile_matrix_consistency_unit_test
	dasall_profile_overlay_composer_unit_test
	dasall_validation_report_unit_test
	dasall_last_known_good_store_unit_test
	dasall_last_known_good_store_impl_unit_test
	PARENT_SCOPE
)
