add_subdirectory(runtime)
add_subdirectory(cognition)
add_subdirectory(llm)
add_subdirectory(tools)
add_subdirectory(memory)
add_subdirectory(knowledge)
add_subdirectory(infra)
add_subdirectory(platform)
add_subdirectory(profiles)
add_subdirectory(services)

set(DASALL_LOGGING_UNIT_TEST_EXECUTABLE_TARGETS
	dasall_log_event_unit_test
	dasall_logger_interface_unit_test
	dasall_logging_errors_unit_test
	dasall_logging_facade_unit_test
	dasall_sink_dispatcher_unit_test
	dasall_async_queue_controller_unit_test
	dasall_audit_link_adapter_unit_test
	dasall_logging_recovery_unit_test
	dasall_logging_config_merge_unit_test
	dasall_logging_metrics_bridge_unit_test
	dasall_logging_health_probe_unit_test
	dasall_log_query_service_unit_test
)

set(DASALL_AUDIT_UNIT_TEST_EXECUTABLE_TARGETS
	dasall_audit_event_unit_test
	dasall_audit_logger_interface_unit_test
	dasall_audit_service_fallback_unit_test
	dasall_audit_export_filter_unit_test
)

set(DASALL_SECRET_UNIT_TEST_EXECUTABLE_TARGETS
	dasall_file_secret_backend_unit_test
	dasall_mock_secret_backend_unit_test
	dasall_secret_backend_interface_unit_test
	dasall_secret_errors_unit_test
	dasall_secret_manager_facade_unit_test
	dasall_secret_health_source_interface_unit_test
	dasall_secret_manager_interface_unit_test
	dasall_secret_lease_registry_unit_test
	dasall_secret_rotation_coordinator_unit_test
	dasall_secret_audit_bridge_unit_test
	dasall_secret_health_probe_unit_test
	dasall_secret_secure_buffer_unit_test
	dasall_secret_types_unit_test
)

set(DASALL_METRICS_UNIT_TEST_EXECUTABLE_TARGETS
	dasall_metric_exporter_interface_unit_test
	dasall_metrics_config_policy_interface_unit_test
	dasall_metrics_config_merge_unit_test
	dasall_metrics_reader_scheduler_unit_test
	dasall_metrics_exporter_adapter_unit_test
	dasall_metrics_recovery_unit_test
	dasall_metrics_logging_bridge_unit_test
	dasall_metrics_audit_bridge_unit_test
	dasall_metrics_errors_unit_test
	dasall_metrics_health_probe_interface_unit_test
	dasall_metrics_snapshots_unit_test
	dasall_metric_types_unit_test
	dasall_metrics_provider_interface_unit_test
	dasall_metrics_facade_unit_test
	dasall_instrument_registry_unit_test
	dasall_metrics_cardinality_guard_unit_test
	dasall_metrics_aggregation_unit_test
	dasall_meter_interface_unit_test
)

set(DASALL_OTA_UNIT_TEST_EXECUTABLE_TARGETS
	dasall_ota_types_unit_test
	dasall_ota_manager_interface_unit_test
	dasall_ota_precheck_service_unit_test
	dasall_ota_package_verifier_unit_test
	dasall_artifact_compatibility_evaluator_unit_test
	dasall_install_executor_unit_test
	dasall_slot_switch_coordinator_unit_test
	dasall_boot_confirmation_monitor_unit_test
	dasall_rollback_controller_unit_test
	dasall_ota_audit_bridge_unit_test
	dasall_ota_health_probe_unit_test
	dasall_ota_package_verifier_interface_unit_test
	dasall_install_executor_interface_unit_test
	dasall_boot_control_adapter_interface_unit_test
)

set(DASALL_WATCHDOG_UNIT_TEST_EXECUTABLE_TARGETS
	dasall_watchdog_service_interface_unit_test
	dasall_heartbeat_source_interface_unit_test
	dasall_timeout_policy_interface_unit_test
	dasall_watched_entity_descriptor_unit_test
	dasall_heartbeat_sample_unit_test
	dasall_timeout_decision_unit_test
	dasall_watchdog_snapshot_unit_test
	dasall_watchdog_recovery_hint_request_unit_test
	dasall_watchdog_service_facade_unit_test
	dasall_watchdog_errors_unit_test
	dasall_heartbeat_registry_unit_test
	dasall_heartbeat_ingestor_unit_test
	dasall_deadline_wheel_unit_test
	dasall_timeout_policy_unit_test
	dasall_timeout_event_publisher_unit_test
	dasall_recovery_request_emitter_unit_test
	dasall_watchdog_config_policy_unit_test
	dasall_watchdog_audit_bridge_unit_test
	dasall_watchdog_metrics_bridge_unit_test
)

set(DASALL_UNIT_TEST_EXECUTABLE_TARGETS
	dasall_runtime_smoke_test
	dasall_service_header_layout_unit_test
	dasall_service_context_builder_unit_test
	dasall_service_facade_unit_test
	dasall_adapter_router_unit_test
	dasall_adapter_bridge_unit_test
	dasall_infra_context_unit_test
	${DASALL_LOGGING_UNIT_TEST_EXECUTABLE_TARGETS}
	${DASALL_AUDIT_UNIT_TEST_EXECUTABLE_TARGETS}
	dasall_health_probe_interface_unit_test
	dasall_health_snapshot_unit_test
	${DASALL_METRICS_UNIT_TEST_EXECUTABLE_TARGETS}
	dasall_trace_config_unit_test
	dasall_trace_types_unit_test
	dasall_span_interface_unit_test
	dasall_trace_context_propagator_interface_unit_test
	dasall_trace_errors_unit_test
	dasall_tracer_provider_impl_unit_test
	dasall_sampling_policy_unit_test
	dasall_batch_span_buffer_unit_test
	dasall_batch_export_unit_test
	dasall_trace_health_probe_unit_test
	dasall_trace_metrics_bridge_unit_test
	dasall_trace_audit_bridge_unit_test
	dasall_tracer_span_lifecycle_unit_test
	dasall_context_propagation_adapter_unit_test
	dasall_infra_service_facade_unit_test
	${DASALL_SECRET_UNIT_TEST_EXECUTABLE_TARGETS}
	dasall_policy_snapshot_compatibility_unit_test
	dasall_policy_types_rule_bundle_unit_test
	dasall_policy_patch_validation_types_unit_test
	dasall_policy_snapshot_op_result_types_unit_test
	dasall_policy_manager_interface_unit_test
	dasall_policy_loader_interface_unit_test
	dasall_policy_loader_config_read_unit_test
	dasall_policy_conflict_resolver_unit_test
	dasall_policy_decision_projector_unit_test
	dasall_policy_audit_bridge_unit_test
	dasall_policy_metrics_bridge_unit_test
	dasall_policy_health_probe_unit_test
	dasall_security_policy_manager_unit_test
	dasall_policy_schema_validator_interface_unit_test
	dasall_policy_schema_validator_unit_test
	dasall_policy_snapshot_store_interface_unit_test
	dasall_policy_snapshot_store_impl_unit_test
	dasall_policy_query_decision_ref_types_unit_test
	dasall_policy_errors_unit_test
	dasall_config_types_unit_test
	dasall_config_center_interface_unit_test
	dasall_config_center_facade_unit_test
	dasall_config_loader_interface_unit_test
	dasall_config_loader_unit_test
	dasall_config_merger_unit_test
	dasall_config_validator_interface_unit_test
	dasall_config_validator_unit_test
	dasall_config_snapshot_store_interface_unit_test
	dasall_config_snapshot_store_unit_test
	dasall_config_publisher_interface_unit_test
	dasall_config_publisher_unit_test
	dasall_config_errors_unit_test
	${DASALL_PLUGIN_UNIT_TEST_EXECUTABLE_TARGETS}
	dasall_health_monitor_interface_unit_test
	dasall_health_monitor_facade_unit_test
	dasall_probe_registry_unit_test
	dasall_probe_executor_unit_test
	dasall_health_evaluator_unit_test
	dasall_recovery_hint_emitter_unit_test
	dasall_health_errors_unit_test
	${DASALL_WATCHDOG_UNIT_TEST_EXECUTABLE_TARGETS}
	dasall_health_policy_interface_unit_test
	dasall_health_probe_types_unit_test
	dasall_health_recovery_hint_unit_test
	dasall_infra_error_code_unit_test
	${DASALL_OTA_UNIT_TEST_EXECUTABLE_TARGETS}
	dasall_platform_init_config_unit_test
	dasall_diagnostics_types_unit_test
	dasall_diagnostics_snapshot_export_unit_test
	dasall_linux_platform_capabilities_unit_test
	dasall_platform_error_mapping_unit_test
	dasall_platform_interface_surface_unit_test
	dasall_linux_platform_factory_unit_test
	dasall_capability_registry_unit_test
	dasall_posix_thread_provider_unit_test
	dasall_posix_timer_provider_unit_test
	dasall_blocking_queue_provider_unit_test
	dasall_linux_file_system_provider_unit_test
	dasall_linux_network_provider_unit_test
	dasall_unix_ipc_provider_unit_test
	dasall_hal_availability_bridge_unit_test
	dasall_profile_catalog_interface_unit_test
	dasall_profile_catalog_unit_test
	dasall_build_profile_manifest_unit_test
	dasall_build_profile_resolver_unit_test
	dasall_runtime_policy_snapshot_unit_test
	dasall_runtime_policy_provider_unit_test
	dasall_profile_compatibility_validator_unit_test
	dasall_profile_matrix_consistency_unit_test
	dasall_profile_overlay_composer_unit_test
	dasall_validation_report_unit_test
	dasall_last_known_good_store_unit_test
	dasall_last_known_good_store_impl_unit_test
	PARENT_SCOPE
)

add_custom_target(dasall_watchdog_unit_tests
	COMMAND ${CMAKE_COMMAND} -E chdir ${CMAKE_BINARY_DIR} ${CMAKE_CTEST_COMMAND} --output-on-failure -L watchdog-unit
	DEPENDS ${DASALL_WATCHDOG_UNIT_TEST_EXECUTABLE_TARGETS}
)
